# project-optum_v

./: .gitignore  README.md  asgi.py  pyproject.toml  vercel.json
api/: main.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: ConfirmModal.jsx  KpiCard.jsx  Layout.jsx  Navbar.jsx  Sidebar.jsx  Skeleton.jsx
frontend/src/data/: dummyData.js  livePayload.js
frontend/src/lib/: api.js
frontend/src/pages/: GoldenSignaturePage.jsx  HistoricalPage.jsx  MonitoringPage.jsx  OverviewPage.jsx  TargetConfigPage.jsx
src/: __init__.py  main.py
src/api/: main.py
src/config/: settings.py
src/data/: pipeline.py  schemas.py
src/golden_signature_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: predictor.py
src/optimization/: nsga2.py  objectives.py  pareto.py
src/services/: adaptive.py  continuous_learning.py  signature_registry.py
src/simulation/: scenario.py
tests/: test_pareto.py
